2024-01-31  Charlie Zender  <zender@uci.edu>

	* NCO 5.2.0-alpha05 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.2.0-alpha05: Sandflower';git push
	git tag -a 5.2.0-alpha05 -m 'ncks: s1d dmn rdr';git push --tags

	* S1D: verify that decoding ELM unstructured history file for PFT variable GPP works fine

	* S1D: fix spatial dimension addition in nco_s1d_unpack()

2024-01-30  Charlie Zender  <zender@uci.edu>

	* NCO 5.2.0-alpha04 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.2.0-alpha04: Heritage BBQ';git push
	git tag -a 5.2.0-alpha04 -m 'all: cf lsy mtd; ncclimo/ncremap: dpr cheyenne, spp derecho, upd perlmutter;ncremap: TR revert to --mono*, ncoidw, revamp MWF';git push --tags

	* Unbreak ~six regression tests by restoring old quantization metadata until CF approves draft convention

	* nco_flt_mtd() finish draft implementation of quantization metadata for both NCO and libnetcdf algorithms

2024-01-19  Charlie Zender  <zender@uci.edu>

	* nco_xtr_dfn() output draft CF metadata container variable and	attributes "family", "algorithm", and "implementation"

2024-01-18  Charlie Zender  <zender@uci.edu>

	* Tweak nco_xtr_dfn() to output draft CF metadata attributes "lossy_compresssion" and "lossy_compression_nsb"

	* Perlmutter remove gcc/11.2.0, update to cray-hdf5/1.12.2.9 cray-netcdf/4.9.0.9

2024-01-12  Charlie Zender  <zender@uci.edu>

	* Perlmutter remove GSL module

2024-01-11  Charlie Zender  <zender@uci.edu>

	* ncremap revamp MWF mode to allow user-specifed alg_lst

	* ncremap prefer 'ncoidw' to 'nco_idw'

2024-01-10  Charlie Zender  <zender@uci.edu>

	* Verify MWF mode works for TR with QU240 and ne11np4

	* ncremap replace --method mono* by --mono* since MWF mode revealed some failures with --method mono*

2024-01-08  Charlie Zender  <zender@uci.edu>

	* Deprecate Cheyenne, support NCAR Derecho

2024-01-07  Charlie Zender  <zender@uci.edu>

	* NCO 5.2.0-alpha03 release procedure: